--- a/HTML-Tables.html
+++ b/HTML-Tables.html
@@ -6,6 +6,7 @@
     <title>Lets Practice HTML Tables</title>
 </head>
 <body>
+    <nav><a href="HTML-Forms.html">Html Forms</a></nav>
     <h1>Heaviest Birds</h1>
     <!--<td> is our data cell for our table <th> will be the header <tr> defines the row of cells -->
     <!--<thead is to define a set of rows defining the head of our columns -->
